[gd_scene load_steps=14 format=3 uid="uid://d1cl5nkswlvo0"]

[ext_resource type="Texture2D" uid="uid://1b4si2ytk217" path="res://Assets/Sprite Sheet.png" id="1_frgm2"]
[ext_resource type="Script" path="res://Objects/button.gd" id="1_hgw2d"]
[ext_resource type="Script" path="res://Scripts/Classes/audio_library.gd" id="2_kjhcf"]
[ext_resource type="Script" path="res://Scripts/Classes/sound_effect.gd" id="3_fc8un"]
[ext_resource type="AudioStream" uid="uid://dgemturr8gub0" path="res://Sfx/button click.wav" id="4_kch1w"]

[sub_resource type="Resource" id="Resource_jx4no"]
script = ExtResource("3_fc8un")
tag = "click"
stream = ExtResource("4_kch1w")

[sub_resource type="Resource" id="Resource_yovd5"]
script = ExtResource("2_kjhcf")
sound_effects = Array[ExtResource("3_fc8un")]([SubResource("Resource_jx4no")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4ma6"]
size = Vector2(14, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8apq0"]
size = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gps2p"]
size = Vector2(12, 2)

[sub_resource type="Animation" id="Animation_h0ugc"]
resource_name = "ButtonClick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(32, 104, 16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickFX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickArea/ButtonClickColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nqgsc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(16, 104, 16, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickFX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickArea/ButtonClickColl:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ueak"]
_data = {
"ButtonClick": SubResource("Animation_h0ugc"),
"RESET": SubResource("Animation_nqgsc")
}

[node name="Button" type="StaticBody2D"]
z_index = 2
script = ExtResource("1_hgw2d")
sfxs = SubResource("Resource_yovd5")

[node name="ButtonSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_frgm2")
region_enabled = true
region_rect = Rect2(16, 104, 16, 8)

[node name="ClickFX" type="Sprite2D" parent="."]
visible = false
z_index = 6
position = Vector2(0, -3)
texture = ExtResource("1_frgm2")
region_enabled = true
region_rect = Rect2(48, 88, 16, 16)

[node name="ButtonBaseColl" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_a4ma6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 5)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_8apq0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(7, 5)
rotation = 0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_8apq0")

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="ButtonClickColl" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gps2p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ueak")
}

[connection signal="body_entered" from="ClickArea" to="." method="_on_click_area_body_entered"]
